--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tryghost/admin-api": "^1.1.0",
     "axios": "^0.19.2",
+    "cors": "^2.8.5",
     "domino": "^2.1.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
