--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "domino": "^2.1.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "metaget": "^1.0.7",
     "page-metadata-parser": "^1.1.4",
     "rss-parser": "^3.7.6"
   }
