--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "domino": "^2.1.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "html-metadata": "^1.7.1",
     "metaget": "^1.0.7",
+    "metascraper": "^5.11.8",
+    "metascraper-author": "^5.11.8",
+    "metascraper-date": "^5.11.8",
+    "metascraper-description": "^5.11.8",
     "page-metadata-parser": "^1.1.4",
     "rss-parser": "^3.7.6"
   }
